<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>be.mirooz.elitedangerous</groupId>
        <artifactId>elite-warboard-parent</artifactId>
        <version>1.1.0-SNAPSHOT</version>
    </parent>
    <artifactId>elite-warboard-missions</artifactId>
    <version>1.1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>be.mirooz.elitedangerous.lib</groupId>
            <artifactId>edtools-client</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>be.mirooz.elitedangerous.lib</groupId>
            <artifactId>inara-client</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- JavaFX Controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.20.0</version>
        </dependency>
        <!-- JSON Processing -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>

        <!-- HTTP Client -->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <filesets>
                        <!-- Supprime la runtime générée -->
                        <fileset>
                            <directory>${project.basedir}/target/runtime</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>

                        <!-- Supprime le dossier app-image EliteDashboard généré par jpackage -->
                        <fileset>
                            <directory>${project.basedir}/executable</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>be.mirooz.elitedangerous.dashboard.EliteDashboardApp</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>install</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>be.mirooz.elitedangerous.dashboard.EliteDashboardApp</mainClass>
                </configuration>
                <goals>
                    <goal>
                        java
                    </goal>
                </goals>
                <executions>
                    <execution>
                        <id>create-runtime</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jlink</executable>
                            <commandlineArgs>
                                --module-path "C:/Progra~1/BellSoft/LibericaJDK-17-Full/jmods"
                                --add-modules java.base,javafx.controls,javafx.fxml,java.logging,java.xml,java.net.http,jdk.crypto.ec
                                --strip-debug --compress=2
                                --output target/runtime
                            </commandlineArgs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>create-installer-windows</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <arguments>
                                <argument>--type</argument>
                                <argument>app-image</argument>
                                <argument>--name</argument>
                                <argument>Elite Warboard</argument>
                                <argument>--dest</argument>
                                <argument>executable</argument>
                                <argument>--vendor</argument>
                                <argument>Mirooz</argument>
                                <argument>--input</argument>
                                <argument>target</argument>
                                <argument>--main-jar</argument>
                                <argument>elite-warboard-missions-${project.version}-jar-with-dependencies.jar</argument>
                                <argument>--main-class</argument>
                                <argument>be.mirooz.elitedangerous.dashboard.EliteDashboardApp</argument>
                                <argument>--runtime-image</argument>
                                <argument>target/runtime</argument>
                                <argument>--icon</argument>
                                <argument>src/main/resources/images/elite_dashboard_icon.ico</argument>

                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <!-- jpackage déjà ajouté ci-dessus -->
                    <execution>
                        <id>inno-setup</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>C:\Program Files (x86)\Inno Setup 6\ISCC.exe</executable>
                            <arguments>
                                <argument>installer.iss</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>